<resources>
    <string name="menuOpenSave">Operation…</string>
    <string name="menuSettings">Settings…</string>
    <string name="menuProperties">Properties…</string>
    <string name="menuSelectDisk">Browse disk…</string>
    <string name="menuSound">Sound</string>
    <string name="menuPokes" translatable="false">Pokes…</string>
    <string name="menuMru">Last…</string>
    <string name="menuReset">Reset</string>
    <string name="menuRestore">Restore</string>
    <string name="menuExecute">Executed</string>
    <string name="menuExit">Exit</string>
    <string name="menuModel">Model…</string>
    <string name="menuTurbo">Turbo mode</string>
    <string name="menuFilter">Filtered</string>
    <string name="menuTape">Trap tape</string>
    <string name="menuDebugger">Debugging</string>
    <string name="menuExeDebugger">Debugger…</string>
    <string name="menuMagic" translatable="false">MAGIC</string>
    <string name="menuDisk1" translatable="false">A:</string>
    <string name="menuDisk2" translatable="false">B:</string>
    <string name="menuDisk3" translatable="false">C:</string>
    <string name="menuDisk4" translatable="false">D:</string>
    <string name="menuKompanion">Kompanion 48K</string>
    <string name="menuSinclair48">Sinclair 48K</string>
    <string name="menuSinclair48n">Sinclair2006 48K</string>
    <string name="menuSinclair128">Sinclair 128K</string>
    <string name="menuPentagon">Pentagon 512K</string>
    <string name="menuScorpion">Scorpion 256K</string>
    <string name="menuPlus2">Sinclair +2</string>
    <string name="menuPlus3">Sinclair +3</string>
    <string name="menuMruEmpty" translatable="false">Empty</string>
    <string name="menuKeyJoy">Keyboard/Joystick</string>
    <string name="menuLabel">Label</string>
    <string name="menuCode">Code</string>
    <string name="menuValue">Content</string>
    <string name="menuQuickSave">QuickSave</string>

    <string name="headerCloud" translatable="false">Download</string>
    <string name="headPoke" translatable="false">Pokes</string>
    <string name="headerIO">Manager</string>
    <string name="headSettings">Settings</string>
    <string name="headBps">Break Points</string>

    <string name="cloudDownload">Download…</string>
    <string name="cloudConnect">Connected…</string>
    <string name="cloudConnectError">Unable to connect to the server. Check your internet connection!</string>

    <string name="ioLoadError">Failed to read. The file is corrupt!</string>
    <string name="ioSaveError">Failed to write. Unknown file format!</string>

    <string name="hintName">name</string>
    <string name="hintAddress">address</string>
    <string name="hintAddress1">begin address</string>
    <string name="hintAddress2">finish address</string>
    <string name="hintMask">mask</string>
    <string name="hintValue">value</string>

    <string name="settingsCPU" translatable="false">CPU</string>
    <string name="settingsJOY" translatable="false">JOYSTICK</string>
    <string name="settingsBORDER" translatable="false">BORDER</string>
    <string name="settingsKEY" translatable="false">KEYBOARD</string>

    <string name="settingsJoyType">Type</string>
    <string name="settingsJoyPreset">Samples</string>
    <string name="settingsJoyLeft">LEFT</string>
    <string name="settingsJoyRight">RIGHT</string>
    <string name="settingsJoyUp">UP</string>
    <string name="settingsJoyDown">DOWN</string>
    <string name="settingsJoyX" translatable="false">X</string>
    <string name="settingsJoyY" translatable="false">Y</string>
    <string name="settingsJoyA" translatable="false">A</string>
    <string name="settingsJoyB" translatable="false">B</string>

    <string name="settingsColorBlack">BLACK</string>
    <string name="settingsColorBlue">BLUE</string>
    <string name="settingsColorRed">RED</string>
    <string name="settingsColorMagenta">MAGENTA</string>
    <string name="settingsColorGreen">GREEN</string>
    <string name="settingsColorCyan">CYAN</string>
    <string name="settingsColorYellow">YELLOW</string>
    <string name="settingsColorWhite">WHITE</string>
    <string name="settingsColorLBlack">LIGHT BLACK</string>
    <string name="settingsColorLBlue">LIGHT BLUE</string>
    <string name="settingsColorLRed">LIGHT RED</string>
    <string name="settingsColorLMagenta">LIGHT MAGENTA</string>
    <string name="settingsColorLGreen">LIGHT GREEN</string>
    <string name="settingsColorLCyan">LIGHT CYAN</string>
    <string name="settingsColorLYellow">LIGHT YELLOW</string>
    <string name="settingsColorLWhite">LIGHT WHITE</string>

    <string name="settingsSoundBeeper">Beeper</string>
    <string name="settingsSoundAY" translatable="false">AY</string>
    <string name="settingsSndVolAY">Volume AY</string>
    <string name="settingsSndVolBP">Volume BP</string>
    <string name="settingsSndFreq">Frequency</string>
    <string name="settingsSoundChip">Chip</string>
    <string name="settingsSoundChannel">Channel</string>

    <string name="settingsTapeCaption">CAPTION</string>
    <string name="settingsTapeLine">LINE</string>
    <string name="settingsTapeArray">ARRAY</string>
    <string name="settingsTapeAddress">ADDRESS</string>
    <string name="settingsTapeScreen">SCREEN</string>
    <string name="settingsTapeBlock">BLOCK</string>
    <string name="settingsTapeBytes">BYTES</string>
    <string name="settingsTapeBasic">BASIC</string>
    <string name="settingsTapeNumArray">N.ARRAY</string>
    <string name="settingsTapeStringArray">S.ARRAY</string>

    <string name="flagS" translatable="false">S</string>
    <string name="flagZ" translatable="false">Z</string>
    <string name="flagY" translatable="false">Y</string>
    <string name="flagH" translatable="false">H</string>
    <string name="flagX" translatable="false">X</string>
    <string name="flagP" translatable="false">P</string>
    <string name="flagN" translatable="false">N</string>
    <string name="flagC" translatable="false">C</string>
    <string name="rom" translatable="false">ROM</string>
    <string name="ri" translatable="false">I</string>
    <string name="ram" translatable="false">RAM</string>
    <string name="raf" translatable="false">AF</string>
    <string name="rhl" translatable="false">HL</string>
    <string name="rde" translatable="false">DE</string>
    <string name="rbc" translatable="false">BC</string>
    <string name="rix" translatable="false">IX</string>
    <string name="riy" translatable="false">IY</string>
    <string name="rpc" translatable="false">PC</string>
    <string name="rsp" translatable="false">SP</string>

    <string name="shadow_null" translatable="false">0,0,0,#ff000000</string>
    <string name="radiiFormMessage" translatable="false">40,35,40,35,20,20,20,20</string>
    <string name="descImage" translatable="false">desc</string>
    <string name="themeDef" translatable="false">def</string>
    <string name="checkReadOnly">ReadOnly</string>
    <string name="diskEmpty">Empty</string>
    <string name="headDisk">Disk browse</string>
    <string name="checkNet" translatable="false">Net</string>
    <string name="checkAutoStart">Basic autostart</string>

</resources>
